[metadata]
name = python_cli
version = 1.0
author = FoodyFood
author_email = dx@outlook.ie
description = Python Command Line Interface Template
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    flask

[options.entry_points]
console_scripts = 
    python_cli = python_cli.main:main

[options.package_data]
python_cli = templates/*.yaml
